# odri_bolt_visualization

./: CMakeLists.txt  README.md  package.xml
config/: bolt_gz_controller.yaml
launch/: display.launch.py  gazebo.launch.py
rviz/: display.rviz
urdf/: arm.xacro  bolt.urdf.xacro  bolt.xacro  bolt_humanoid.xacro  joint_interface.xacro  leg.xacro  plane_with_restitution.urdf.xacro  upper_body.xacro
